<resources>
    <string name="app_name">Currency Conversion App</string>
    <string name="action_settings">Settings</string>
    <string name="txtTitle">Currency Conversion</string>
    <string name="txtHint">Enter US Dollar Amount</string>
    <string name="btnConvert">Convert</string>
    <string name="radBtn1">Euros</string>
    <string name="radBtn2">Mexican Pesos</string>
    <string name="radBtn3">Canadian Dollars</string>
</resources>
